<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="13"
    tools:context="com.example.liaofan_01.EditPostActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_row="0" >
        <TextView
         android:id="@+id/post_kind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/post_kind" />



    <TextView
         android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/payment" />

    <TextView
         android:id="@+id/support_need"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/support_need" />

    <TextView
         android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/location" />

    <TextView
         android:id="@+id/avail_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/avail_time" />
    </LinearLayout>
    

    <!-- 输入标题的行 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/post_name"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:inputType="text" />

    <!-- 输入标签的行 -->

    <TextView
        android:id="@+id/itemRemark0"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2"
       
        android:gravity="end"
        android:text="@string/remark"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemRemark"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        
        android:inputType="text" />
 <LinearLayout
        android:id="@+id/payment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:visibility="gone"
        android:layout_columnSpan="5"
        android:layout_row="3" >
    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:gravity="end"
        android:text="@string/payment1"
        android:textSize="@dimen/label_font_size" />
          <CheckBox
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="钱"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="物"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="服务"
            android:textSize="16sp" />
    
    </LinearLayout>
    
    <!-- 输入电话 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="4"
        
        android:text="@string/contact"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
       
        android:inputType="numberDecimal" />
    
    
    <!-- 输入物品描述的行 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="5"
        android:layout_rowSpan="4"
        android:text="@string/post_desc"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemDesc"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_rowSpan="4"
        android:gravity="top"
        android:hint="添加对标题的描述..."
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="10"
        android:minHeight="30dip"
        android:minLines="10" />

    <!--
输入赏金的行
<TableRow>
<TextView
	android:text="@string/init_price"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<EditText
	android:id="@+id/initPrice"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:inputType="numberDecimal"/>
</TableRow>
    -->
    <!--
选择有效时间的行
<TableRow>
<TextView
	android:text="@string/avail_time"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<Spinner
	android:id="@+id/availTime"
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"
	android:entries="@array/availTime"/>
</TableRow>
    -->


    <!-- 定义按钮的行 -->

    <LinearLayout
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_row="10"
        android:gravity="end" >

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needwall"
            android:textSize="16sp" />
    </LinearLayout>
   
    <Button
        android:id="@+id/bnAdd"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="11"
        android:text="@string/add" />

    <Button
        android:id="@+id/bnCancel"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_row="11"
        android:text="@string/cancel" />

</GridLayout>
